# Grona

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  grona.cmd  grona.ps1  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: tests.yml
docs/: architecture.md  benchmarking.md  dataset-ingestion.md  development.md  experimental-lora-backend.md  growth-lab.md  inference-review.md  local-llm-baseline.md  local-training-handoff.md  local-training-workflow.md  model-build-readiness.md  optional-training-plugins.md  orchestration.md  project-vision.md  prompting.md  release-notes-v0.1.0-prototype.md  research-notes.md  reviewed-trace-training.md  roadmap.md  training-artifacts.md  training-backends.md  training-dataset-package.md  training-dry-run.md  training-pipeline-audit.md  training-plan.md  workspaces.md
examples/: adaptive_routing_demo.py  basic_routing_demo.py  benchmark_demo.py  benchmark_regression_demo.py  dataset_ingestion_demo.py  dataset_review_demo.py  document_ingestion_demo.py  donor_model_demo.py  execution_adapters_demo.py  experiment_comparison_demo.py  experiment_gate_demo.py  experimental_lora_backend_demo.py  expert_execution_demo.py  feedback_demo.py  grape_cluster_demo.py  growth_engine_demo.py  inference_review_demo.py  jsonl_dataset_ingestion_demo.py  knowledge_review_demo.py  knowledge_seed_demo.py  local_llm_baseline_demo.py  memory_demo.py  model_build_readiness_demo.py  optional_training_backend_demo.py  orchestration_demo.py  prompt_trace_demo.py  reviewed_trace_training_demo.py  safety_policy_demo.py  tool_adapter_demo.py  training_artifact_demo.py  training_backend_demo.py  training_dry_run_demo.py  training_export_demo.py  training_package_demo.py  training_pipeline_audit_demo.py  training_plan_demo.py  workspace_profile_demo.py
src/grona/: __init__.py  __main__.py  adapters.py  adaptive.py  benchmark_cli.py  benchmark_regression_cli.py  benchmark_runs.py  benchmarks.py  cli.py  context.py  dataset_manifest.py  dataset_review.py  dataset_review_cli.py  datasets.py  decision.py  defaults.py  documents.py  donor.py  donor_cli.py  entrypoint.py  executor.py  experiment_cli.py  experiment_gate_cli.py  experimental_lora_cli.py  experiments.py  feedback.py  growth.py  growth_clusters.py  growth_engine.py  growth_review.py  inference_review.py  inference_review_cli.py  jsonl_dataset_cli.py  local_llm.py  local_llm_cli.py  memory.py  model_build_readiness.py  model_build_readiness_cli.py  module.py  orchestrator.py  (+25 more)
src/grona/experimental_training/: __init__.py  lora_backend.py
tests/: test_adapters.py  test_adaptive.py  test_benchmark_runs.py  test_benchmarks.py  test_cli.py  test_context.py  test_dataset_manifest.py  test_dataset_review.py  test_datasets.py  test_documents.py  test_donor.py  test_executor.py  test_experimental_lora_backend.py  test_experiments.py  test_feedback.py  test_growth.py  test_growth_clusters.py  test_growth_engine.py  test_growth_review.py  test_inference_review.py  test_local_llm.py  test_memory.py  test_model_build_readiness.py  test_module.py  test_orchestration.py  test_prompting.py  test_registry.py  test_reviewed_trace_training.py  test_router.py  test_safety.py  test_tools.py  test_training.py  test_training_artifacts.py  test_training_backends.py  test_training_dry_run.py  test_training_package.py  test_training_pipeline_audit.py  test_training_plan.py  test_training_plugins.py  test_workspace.py
tools/: build_ultimate_dataset.ps1  chat_lora_adapter.py  eval_lora_adapter.py  generate_donor_dataset.py  local_training_env.ps1  make_big_hf_mix_dataset.py  make_hf_mix_dataset.py  make_openhermes_stream_dataset.py  make_repo_grounded_dataset.py  test_lora_adapter.py  train_lora_local.py  train_ultimate_lora.ps1  validate_jsonl.py
