[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grona"
version = "0.1.0"
description = "A lightweight research prototype for sparse modular AI routing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Robotyaga" }
]
keywords = ["ai", "routing", "sparse-activation", "modular-ai", "research"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
grona-demo = "grona.entrypoint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"examples/inference_review_demo.py" = ["I001"]
"examples/training_package_demo.py" = ["I001"]
"src/grona/benchmark_cli.py" = ["E501", "I001"]
"src/grona/benchmarks.py" = ["E501", "F401"]
"src/grona/entrypoint.py" = ["I001"]
"src/grona/inference_review.py" = ["E501"]
"src/grona/inference_review_cli.py" = ["E501"]
"src/grona/training_package.py" = ["E501"]
"src/grona/training_package_cli.py" = ["E501"]
"tests/test_training_package.py" = ["E501", "I001"]
