[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grona"
version = "0.1.0"
description = "A lightweight research prototype for sparse modular AI routing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Robotyaga" }
]
keywords = ["ai", "routing", "sparse-activation", "modular-ai", "research"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
training = [
    "torch",
    "transformers",
    "peft",
    "accelerate",
    "datasets",
]
qlora = [
    "bitsandbytes",
]

[project.scripts]
grona-demo = "grona.entrypoint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"examples/experimental_lora_backend_demo.py" = ["E501", "I001"]
"examples/inference_review_demo.py" = ["I001"]
"examples/optional_training_backend_demo.py" = ["E501", "I001"]
"examples/training_artifact_demo.py" = ["E501", "I001"]
"examples/training_backend_demo.py" = ["E501", "I001"]
"examples/training_dry_run_demo.py" = ["E501", "I001"]
"examples/training_package_demo.py" = ["I001"]
"examples/training_plan_demo.py" = ["E501", "I001"]
"src/grona/__init__.py" = ["I001"]
"src/grona/benchmark_cli.py" = ["E501", "I001"]
"src/grona/benchmarks.py" = ["E501", "F401"]
"src/grona/entrypoint.py" = ["I001"]
"src/grona/experimental_lora_cli.py" = ["E501"]
"src/grona/experimental_training/lora_backend.py" = ["E501", "F401", "I001"]
"src/grona/inference_review.py" = ["E501"]
"src/grona/inference_review_cli.py" = ["E501"]
"src/grona/training_artifact_cli.py" = ["E501"]
"src/grona/training_artifacts.py" = ["E501", "I001"]
"src/grona/training_backend_cli.py" = ["E501"]
"src/grona/training_backends.py" = ["E501", "I001"]
"src/grona/training_dry_run.py" = ["E501", "I001"]
"src/grona/training_dry_run_cli.py" = ["E501"]
"src/grona/training_package.py" = ["E501"]
"src/grona/training_package_cli.py" = ["E501"]
"src/grona/training_plan.py" = ["E501"]
"src/grona/training_plan_cli.py" = ["E501"]
"src/grona/training_plugin_cli.py" = ["E501"]
"src/grona/training_plugins.py" = ["E501", "I001"]
"tests/test_experimental_lora_backend.py" = ["E501", "I001"]
"tests/test_training_artifacts.py" = ["E501", "I001"]
"tests/test_training_backends.py" = ["E501", "I001"]
"tests/test_training_dry_run.py" = ["E501", "I001"]
"tests/test_training_package.py" = ["E501", "I001"]
"tests/test_training_plan.py" = ["E501", "I001"]
"tests/test_training_plugins.py" = ["E501", "I001"]
